# pythonprac

./: README.orig.md
20220913/1/: URLS.txt
20220913/2/: URLS.txt  prog.py  prog.py.save
20220913/tests/: 2.in  2.out
20220920/1/: URLS  prog.py
20220920/2/: URLS.txt  prog.py
20220920/3/: URLS.txt  prog.py
20220927/1/: URLS.txt  prog.py
20220927/2/: URLS  prog.py
20220927/3/: URLS.txt  prog.py
20221004/1/: URLS  prog.py
20221004/2/: URLS.txt  prog.py
20221004/3/: URLS  prog.py
20221004/4/: URLS  prog.py
20221011/1/: URLS.txt  prog.py
20221011/3/: URLS.txt  prog.py
20221018/1/: URLS  prog.py
20221018/2/: URLS  prog.py
20221018/3/: URLS  prog.py
20221025/1/: URLS.txt  prog.py
20221025/2/: URLS  prog.py
20221025/3/: URLS.txt  prog.py
20221101/1/: URLS  prog.py
20221101/2/: URLS  prog.py
20221101/3/: URLS  prog.py
20221108/1/: URLS  prog.py
20221108/2/: URLS.txt  prog.py
20221108/3/: URLS.txt  prog.py
20221115/1/: URLS.txt  prog.py
20221115/2/: URLS.txt  prog.py
20221115/3/: URLS  prog.py
20221122/1/: URLS.txt  prog.py
20221122/2/: prog.py
20221122/3/: URLS  prog.py
20221129/1/: URLS  prog.py
20221129/2/: URLS.txt  prog.py
20221206/1/: prog.py
20221206/2/: prog.py
20230213/1/: prog.py
20230515/1/moodclient/: pyproject.toml
20230515/1/moodclient/MoodClient.egg-info/: PKG-INFO  SOURCES.txt
20230515/1/moodclient/moodclient/: client.py
20230515/1/moodserver/: pyproject.toml
20230515/1/moodserver/MoodServer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
20230515/1/moodserver/moodserver/serv_loc/ru/LC_MESSAGES/: serv_loc.mo
(+207 files in other folders)
